--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=AbarrotesExpress
 APP_ENV=local
 APP_KEY=base64:ahFNw3Wp6+f4/pXB77KacZaEXwiZwKy3MzZskjgjJv0=
 APP_DEBUG=true
