--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=b042ri7zgpmmcugnwspi-mysql.services.clever-cloud.com
-DB_PORT=3306
-DB_DATABASE=b042ri7zgpmmcugnwspi
+DB_HOST=hv-par6-002.clvrcld.net
+DB_PORT=12602
+DB_DATABASE=bronfyv0fqkh0unlj3ty
 DB_USERNAME=utiyr2pnksw8twwq
 DB_PASSWORD=m387Qf9ZY3BXGF7zcl8K
 
