⚒ Modificaciones en Categorias en los campos imagen y disponible

--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=hv-par6-002.clvrcld.net
-DB_PORT=12602
-DB_DATABASE=bronfyv0fqkh0unlj3ty
-DB_USERNAME=utiyr2pnksw8twwq
-DB_PASSWORD=m387Qf9ZY3BXGF7zcl8K
+DB_HOST=67.211.222.190
+DB_PORT=3306
+DB_DATABASE=st47961_abarrotes-express
+DB_USERNAME=st47961_admin
+DB_PASSWORD=administrador
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
