👤 Actualizacion Vista de usuarios
🎦 Ademas de actualizarse que redireccione a la vista y se eliminen los modales, se agregó la paginación y la configuración para conexión remota de archivos mediante FTP para no subirlos a GitHub

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=AbarrotesExpress
 APP_ENV=local
 APP_KEY=base64:ahFNw3Wp6+f4/pXB77KacZaEXwiZwKy3MzZskjgjJv0=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://127.0.0.1:8000/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -17,14 +17,14 @@ DB_PASSWORD=administrador
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=ftp
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=http://127.0.0.1:8000
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -57,3 +57,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FTP_HOST=67.211.222.190
+FTP_USERNAME=st47961
+FTP_PASSWORD=cB8hSjFgPbAaSXkdMRAr
+FTP_PORT=21
+FTP_ROOT=public/
