--- a/.env
+++ b/.env
@@ -18,6 +18,7 @@ DB_PASSWORD=administrador
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=ftp
+FILAMENT_FILESYSTEM_DISK=ftp
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
