🌍 Modificación en .env

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=AbarrotesExpress
 APP_ENV=local
 APP_KEY=base64:ahFNw3Wp6+f4/pXB77KacZaEXwiZwKy3MzZskjgjJv0=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000/
+APP_URL=67.211.222.190
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -17,7 +17,8 @@ DB_PASSWORD=administrador
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=ftp
+#FILESYSTEM_DISK=local
+FILAMENT_FILESYSTEM_DISK=ftp
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
