--- a/.env
+++ b/.env
@@ -2,29 +2,30 @@ APP_NAME=AbarrotesExpress
 APP_ENV=local
 APP_KEY=base64:ahFNw3Wp6+f4/pXB77KacZaEXwiZwKy3MzZskjgjJv0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=hv-par6-002.clvrcld.net
-DB_PORT=12602
-DB_DATABASE=bronfyv0fqkh0unlj3ty
-DB_USERNAME=utiyr2pnksw8twwq
-DB_PASSWORD=m387Qf9ZY3BXGF7zcl8K
+DB_HOST=67.211.222.190
+DB_PORT=3306
+DB_DATABASE=st47961_abarrotes-express
+DB_USERNAME=st47961_admin
+DB_PASSWORD=administrador
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=ftp
+FILAMENT_FILESYSTEM_DISK=ftp
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=http://127.0.0.1:8000
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -57,3 +58,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FTP_HOST=67.211.222.190
+FTP_USERNAME=st47961
+FTP_PASSWORD=cB8hSjFgPbAaSXkdMRAr
+FTP_PORT=21
+FTP_ROOT=public/
