🔚Version anterior a la entrega

--- a/.env
+++ b/.env
@@ -9,16 +9,24 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=67.211.222.190
-DB_PORT=3306
-DB_DATABASE=st47961_abarrotes-express
-DB_USERNAME=st47961_admin
-DB_PASSWORD=administrador
+DB_HOST=localhost
+DB_PORT=
+DB_DATABASE=st47961_abarrotes_express
+DB_USERNAME=analisis
+DB_PASSWORD=analisis2024.
+
+#Variables en remoto
+#DB_CONNECTION=mysql
+#DB_HOST=67.211.222.190
+#DB_PORT=3306
+#DB_DATABASE=st47961_abarrotes-express
+#DB_USERNAME=st47961_admin
+#DB_PASSWORD=administrador
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=ftp
-FILAMENT_FILESYSTEM_DISK=ftp
+FILESYSTEM_DISK=local
+#FILAMENT_FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -59,10 +67,10 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-FTP_HOST=67.211.222.190
-FTP_USERNAME=st47961
-FTP_PASSWORD=cB8hSjFgPbAaSXkdMRAr
-FTP_PORT=21
-FTP_ROOT=public/
-FTP_URL=http://st47961.ispot.cc/laravel8/storage/public
-CUSTOM_FTP_URL=http://st47961.ispot.cc/laravel8/storage/public
+#FTP_HOST=67.211.222.190
+#FTP_USERNAME=st47961
+#FTP_PASSWORD=cB8hSjFgPbAaSXkdMRAr
+#FTP_PORT=21
+#FTP_ROOT=public/
+#FTP_URL=http://st47961.ispot.cc/laravel8/storage/public
+#CUSTOM_FTP_URL=http://st47961.ispot.cc/laravel8/storage/public
