--- a/.env
+++ b/.env
@@ -8,20 +8,20 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=
-DB_DATABASE=st47961_abarrotes_express
-DB_USERNAME=analisis
-DB_PASSWORD=analisis2024.
+#DB_CONNECTION=mysql
+#DB_HOST=localhost
+#DB_PORT=
+#DB_DATABASE=st47961_abarrotes_express
+#DB_USERNAME=analisis
+#DB_PASSWORD=analisis2024.
 
 #Variables en remoto
-#DB_CONNECTION=mysql
-#DB_HOST=67.211.222.190
-#DB_PORT=3306
-#DB_DATABASE=st47961_abarrotes-express
-#DB_USERNAME=st47961_admin
-#DB_PASSWORD=administrador
+DB_CONNECTION=mysql
+DB_HOST=67.211.222.190
+DB_PORT=3306
+DB_DATABASE=st47961_abarrotes-express
+DB_USERNAME=st47961_admin
+DB_PASSWORD=administrador
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
