--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.4.38",
-        "tailwindcss": "^3.4.3",
+        "postcss": "^8.4.39",
+        "tailwindcss": "^3.4.1",
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "preline": "^2.3.0"
+        "preline": "^2.3.0",
+        "swiper": "^11.0.7"
     }
 }
