--- a/.env
+++ b/.env
@@ -2,26 +2,26 @@ APP_NAME=AbarrotesExpress
 APP_ENV=local
 APP_KEY=base64:ahFNw3Wp6+f4/pXB77KacZaEXwiZwKy3MzZskjgjJv0=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://127.0.0.1:8000/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=
-DB_DATABASE=st47961_abarrotes_express
-DB_USERNAME=analisis
-DB_PASSWORD=analisis2024.
-
-#Variables en remoto
 #DB_CONNECTION=mysql
-#DB_HOST=67.211.222.190
+#DB_HOST=127.0.0.1
 #DB_PORT=3306
-#DB_DATABASE=st47961_abarrotes-express
-#DB_USERNAME=st47961_admin
-#DB_PASSWORD=administrador
+#DB_DATABASE=st47961_abarrotes_express
+#DB_USERNAME=analisis
+#DB_PASSWORD=analisis2024.
+
+Variables en remoto
+DB_CONNECTION=mysql
+DB_HOST=67.211.222.190
+DB_PORT=3306
+DB_DATABASE=st47961_abarrotes-express
+DB_USERNAME=st47961_admin
+DB_PASSWORD=administrador
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
