--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_LEVEL=debug
 
 #Variables en remoto
 DB_CONNECTION=mysql
-DB_HOST=67.211.222.190
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=st47961_abarrotes-express
-DB_USERNAME=st47961_admin
-DB_PASSWORD=administrador
+DB_USERNAME=analisis
+DB_PASSWORD=analisis2024.
 
 
 
