--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ APP_NAME=AbarrotesExpress
 APP_ENV=local
 APP_KEY=base64:ahFNw3Wp6+f4/pXB77KacZaEXwiZwKy3MzZskjgjJv0=
 APP_DEBUG=true
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -9,17 +10,15 @@ LOG_LEVEL=debug
 
 #Variables en remoto
 DB_CONNECTION=mysql
-DB_HOST=67.211.222.190
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=st47961_abarrotes-express
-DB_USERNAME=st47961_admin
-DB_PASSWORD=administrador
-
-
-
+DB_DATABASE=st47961_abarrotes_express
+DB_USERNAME=analisis
+DB_PASSWORD=analisis2024.
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=public
+FILAMENT_FILESYSTEM_DISK=public
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
