--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-#Variables en remoto
+#Variables en remotogit
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
