--- a/.env
+++ b/.env
@@ -11,9 +11,19 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=abarrotes_express
+DB_DATABASE=st47961_abarrotes_express
 DB_USERNAME=analisis
-DB_PASSWORD=analisis2024.
+DB_PASSWORD=tu_contraseña
+ 
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=st47961_abarrotes_express
+DB_USERNAME=analisis
+DB_PASSWORD=tu_contraseña
+
+
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
