--- a/.env
+++ b/.env
@@ -18,13 +18,10 @@ DB_PASSWORD=tu_contraseña
  
 DB_CONNECTION=mysql
 DB_HOST=localhost
-DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=st47961_abarrotes_express
+DB_DATABASE=abarrotes_express
 DB_USERNAME=analisis
-DB_PASSWORD=tu_contraseña
-
-
+DB_PASSWORD=analisis2024.
 
 
 BROADCAST_DRIVER=log
