--- a/.env
+++ b/.env
@@ -9,12 +9,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 #Variables en remoto
-DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=st47961_abarrotes_express
-DB_USERNAME=analisis
-DB_PASSWORD=tu_contraseña
+#DB_CONNECTION=mysql
+#DB_HOST=localhost
+#DB_PORT=3306
+#DB_DATABASE=st47961_abarrotes_express
+#DB_USERNAME=analisis
+#DB_PASSWORD=tu_contraseña
  
 DB_CONNECTION=mysql
 DB_HOST=localhost
